Z-index bug correction

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -343,7 +343,7 @@ footer {
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: 100;
+    z-index: 99999;
     background: rgba(0,0,0,0.65);
     text-align: center;
   }
